fixtures/typescript/fallback/should_fail/promiseCatchDefault.ts
const data = fetchApi().catch((err) => []);
const data2 = fetchApi().catch(() => null);
